src/test/deca/syntax/valid/return.deca
// Description:
//    on retourne une exp
//
// ok


{ return 1;
  return 1+1;
  return "oh";
  return 2*3;
  return 1-1;
  return true;}
