src/test/deca/syntax/invalid/mauvais_return_1.deca
// Description:
//    on retourne 2 expr 
//
// Resultats:
// ligne 8:  "extraneous input '3' expecting {'<', '>', '=', '+', '-', '*', '%', '/', '.', ';', '==', '!=', '>=', '<=', '&&', '||', 'instanceof'}"


{ return 2 3;}
